misc/parser/parser.output
Terminals unused in grammar

    ASCII
    EQU
    END


Grammar

    0 $accept: NT_Program "end of file"

    1 NT_Program: NT_Program NT_Line
    2           | NT_Line
    3           | "end of file"

    4 NT_Line: NT_Directive

    5 NT_Directive: NT_DirectiveWithSymbolList
    6             | NT_DirectiveWithList
    7             | NT_DirectiveSingleArgument

    8 NT_DirectiveWithList: WORD NT_LiteralList
    9                     | WORD NT_SymbolList

   10 NT_DirectiveSingleArgument: SECTION SYMBOL
   11                           | SKIP LITERAL

   12 NT_DirectiveWithSymbolList: NT_DirectiveIdentifier NT_SymbolList

   13 NT_DirectiveIdentifier: GLOBAL
   14                       | EXTERN

   15 NT_SymbolList: NT_SymbolList "," SYMBOL
   16              | SYMBOL

   17 NT_LiteralList: NT_LiteralList "," LITERAL
   18               | LITERAL


Terminals, with rules where they appear

    "end of file" (0) 0 3
    error (256)
    GLOBAL (258) 13
    EXTERN (259) 14
    SECTION (260) 10
    WORD (261) 8 9
    SKIP (262) 11
    ASCII (263)
    EQU (264)
    END (265)
    SYMBOL <string> (266) 10 15 16
    LITERAL <string> (267) 11 17 18
    "," (268) 15 17


Nonterminals, with rules where they appear

    $accept (14)
        on left: 0
    NT_Program (15)
        on left: 1 2 3
        on right: 0 1
    NT_Line (16)
        on left: 4
        on right: 1 2
    NT_Directive (17)
        on left: 5 6 7
        on right: 4
    NT_DirectiveWithList <string> (18)
        on left: 8 9
        on right: 6
    NT_DirectiveSingleArgument <string> (19)
        on left: 10 11
        on right: 7
    NT_DirectiveWithSymbolList <string> (20)
        on left: 12
        on right: 5
    NT_DirectiveIdentifier <eInstructionIdentifier> (21)
        on left: 13 14
        on right: 12
    NT_SymbolList <vector<pair<string, eOperandType>>> (22)
        on left: 15 16
        on right: 9 12 15
    NT_LiteralList <vector<pair<string, eOperandType>>> (23)
        on left: 17 18
        on right: 8 17


State 0

    0 $accept: • NT_Program "end of file"

    "end of file"  shift, and go to state 1
    GLOBAL         shift, and go to state 2
    EXTERN         shift, and go to state 3
    SECTION        shift, and go to state 4
    WORD           shift, and go to state 5
    SKIP           shift, and go to state 6

    NT_Program                  go to state 7
    NT_Line                     go to state 8
    NT_Directive                go to state 9
    NT_DirectiveWithList        go to state 10
    NT_DirectiveSingleArgument  go to state 11
    NT_DirectiveWithSymbolList  go to state 12
    NT_DirectiveIdentifier      go to state 13


State 1

    3 NT_Program: "end of file" •

    $default  reduce using rule 3 (NT_Program)


State 2

   13 NT_DirectiveIdentifier: GLOBAL •

    $default  reduce using rule 13 (NT_DirectiveIdentifier)


State 3

   14 NT_DirectiveIdentifier: EXTERN •

    $default  reduce using rule 14 (NT_DirectiveIdentifier)


State 4

   10 NT_DirectiveSingleArgument: SECTION • SYMBOL

    SYMBOL  shift, and go to state 14


State 5

    8 NT_DirectiveWithList: WORD • NT_LiteralList
    9                     | WORD • NT_SymbolList

    SYMBOL   shift, and go to state 15
    LITERAL  shift, and go to state 16

    NT_SymbolList   go to state 17
    NT_LiteralList  go to state 18


State 6

   11 NT_DirectiveSingleArgument: SKIP • LITERAL

    LITERAL  shift, and go to state 19


State 7

    0 $accept: NT_Program • "end of file"
    1 NT_Program: NT_Program • NT_Line

    "end of file"  shift, and go to state 20
    GLOBAL         shift, and go to state 2
    EXTERN         shift, and go to state 3
    SECTION        shift, and go to state 4
    WORD           shift, and go to state 5
    SKIP           shift, and go to state 6

    NT_Line                     go to state 21
    NT_Directive                go to state 9
    NT_DirectiveWithList        go to state 10
    NT_DirectiveSingleArgument  go to state 11
    NT_DirectiveWithSymbolList  go to state 12
    NT_DirectiveIdentifier      go to state 13


State 8

    2 NT_Program: NT_Line •

    $default  reduce using rule 2 (NT_Program)


State 9

    4 NT_Line: NT_Directive •

    $default  reduce using rule 4 (NT_Line)


State 10

    6 NT_Directive: NT_DirectiveWithList •

    $default  reduce using rule 6 (NT_Directive)


State 11

    7 NT_Directive: NT_DirectiveSingleArgument •

    $default  reduce using rule 7 (NT_Directive)


State 12

    5 NT_Directive: NT_DirectiveWithSymbolList •

    $default  reduce using rule 5 (NT_Directive)


State 13

   12 NT_DirectiveWithSymbolList: NT_DirectiveIdentifier • NT_SymbolList

    SYMBOL  shift, and go to state 15

    NT_SymbolList  go to state 22


State 14

   10 NT_DirectiveSingleArgument: SECTION SYMBOL •

    $default  reduce using rule 10 (NT_DirectiveSingleArgument)


State 15

   16 NT_SymbolList: SYMBOL •

    $default  reduce using rule 16 (NT_SymbolList)


State 16

   18 NT_LiteralList: LITERAL •

    $default  reduce using rule 18 (NT_LiteralList)


State 17

    9 NT_DirectiveWithList: WORD NT_SymbolList •
   15 NT_SymbolList: NT_SymbolList • "," SYMBOL

    ","  shift, and go to state 23

    $default  reduce using rule 9 (NT_DirectiveWithList)


State 18

    8 NT_DirectiveWithList: WORD NT_LiteralList •
   17 NT_LiteralList: NT_LiteralList • "," LITERAL

    ","  shift, and go to state 24

    $default  reduce using rule 8 (NT_DirectiveWithList)


State 19

   11 NT_DirectiveSingleArgument: SKIP LITERAL •

    $default  reduce using rule 11 (NT_DirectiveSingleArgument)


State 20

    0 $accept: NT_Program "end of file" •

    $default  accept


State 21

    1 NT_Program: NT_Program NT_Line •

    $default  reduce using rule 1 (NT_Program)


State 22

   12 NT_DirectiveWithSymbolList: NT_DirectiveIdentifier NT_SymbolList •
   15 NT_SymbolList: NT_SymbolList • "," SYMBOL

    ","  shift, and go to state 23

    $default  reduce using rule 12 (NT_DirectiveWithSymbolList)


State 23

   15 NT_SymbolList: NT_SymbolList "," • SYMBOL

    SYMBOL  shift, and go to state 25


State 24

   17 NT_LiteralList: NT_LiteralList "," • LITERAL

    LITERAL  shift, and go to state 26


State 25

   15 NT_SymbolList: NT_SymbolList "," SYMBOL •

    $default  reduce using rule 15 (NT_SymbolList)


State 26

   17 NT_LiteralList: NT_LiteralList "," LITERAL •

    $default  reduce using rule 17 (NT_LiteralList)
